# dialectic-llm

./: .env.example  .gitignore  .pre-commit-config.yaml  HANDOFF_JOSE.md  README.md  Sprints.md  SprintsV3.md  al,a;,;as;as;a;c;a```  demo_s1_07_tas.py  demo_s1_10_analytics.py  demo_s2_09_budget.py  example_usage.py  pyproject.toml  run_s1_13_analysis.py  run_s2_05_tas_200.py  run_s2_06_mamv_200.py  run_s2_08_coherence_analysis.py  test_s2_05_setup.py
configs/: model.yaml
docs/: baseline_runner.md  s1_07_merge_summary.md  s1_10_analytics.md  s2_09_budget_monitor.md
reports/: HANDOFF_JOSE.md  Reporte_General_Consolidado.md  S2-19_Triage_Report.md  Sprint2.md  Sprint3.md  Sprint4.md  SprintsV4.md  error_taxonomy_report.md  errors_gsm8k.csv  s1_13_analysis_report.md  s1_16_templating_hashing.md  s2_01_retry_backoff_ratelimit.md
scripts/: fix_tas_s2_output.py  inspect_parquets.py  label_and_summarize_errors.py  label_errors.py  resume_s2_05_tas_200_gpt35.py  run_s1_13_analysis.py  run_s2_05_tas_200_gpt35.py  run_s2_06_mamv_50.py  run_s2_10_mcnemar_analysis.py  run_s3_07_baseline_tqa_50.py  run_s3_08_tas_tqa_50.py  run_s3_13_mcnemar_analysis.py  run_s3_13_mcnemar_baseline_vs_mamv.py  run_s3_13_tas_50_common.py  run_s4_02_consolidate_results.py  run_s4_03_generate_final_kpis.py  run_s4_04_generate_ablation.py  run_s4_05_check_no_regression.py  run_s4_06_generate_figures.py  run_s4_09_error_analysis.py
tests/: conftest.py  test_baseline.py  test_baseline_runner.py  test_budget_monitor.py  test_coherence.py  test_data.py  test_data_utils.py  test_evaluation.py  (+13 more)
(+89 files in other folders)
